# ai-cli

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
ai_cli/: cli.py  config.py  models.py
tests/: __init__.py  test_cli.py  test_integration.py  test_models.py
